# rust-uefi-runtime-driver

./: .gdbinit  Cargo.toml  LICENSE  README.md  create_disk.sh  load-symbols.py
.cargo/: config
.github/workflows/: build.yml
src/: logger.rs  main.rs  utils.rs
