[package]
name = "rust-efi-runtime-driver"
version = "0.1.0"
authors = ["xitan <x1tan@users.noreply.github.com>"]
edition = "2018"
license = "MIT"
categories = [
    "no-std",
    "os",
]
keywords = [
    "efi",
    "uefi",
    "runtime",
    "driver",
]
readme = "README.md"
homepage = "https://xitan.me"
repository = "https://github.com/x1tan/rust-efi-runtime-driver"


[dependencies]
r-efi = "3.1.0"
x86_64 = "0.12.2"
atomic_refcell = "0.1.6"
